[gd_scene load_steps=6 format=3 uid="uid://c0331kddmygfg"]

[ext_resource type="Script" path="res://UI/PopUp/HoverPopupEntry.gd" id="1_6evb2"]
[ext_resource type="FontFile" uid="uid://bgmbqeubb34cp" path="res://Assets/Fonts/rogue.ttf" id="2_mh3gx"]
[ext_resource type="PackedScene" uid="uid://ciug3sucml2b5" path="res://UI/PopUp/EnergyIcon.tscn" id="3_hiiv5"]

[sub_resource type="LabelSettings" id="LabelSettings_0dv8f"]
line_spacing = 0.0
font = ExtResource("2_mh3gx")
font_size = 26
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xdxmy"]
font = ExtResource("2_mh3gx")
font_size = 18
font_color = Color(0.839844, 0.839844, 0.839844, 1)

[node name="HoverPopupEntry" type="MarginContainer"]
size_flags_vertical = 3
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0
script = ExtResource("1_6evb2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="EntityName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
text = "Rock"
label_settings = SubResource("LabelSettings_0dv8f")
horizontal_alignment = 1

[node name="HoverEnergyList" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="EnergyIcon1" parent="VBoxContainer/HoverEnergyList" instance=ExtResource("3_hiiv5")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnergyIcon2" parent="VBoxContainer/HoverEnergyList" instance=ExtResource("3_hiiv5")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnergyIcon3" parent="VBoxContainer/HoverEnergyList" instance=ExtResource("3_hiiv5")]
unique_name_in_owner = true
layout_mode = 2

[node name="EnergyIcon4" parent="VBoxContainer/HoverEnergyList" instance=ExtResource("3_hiiv5")]
unique_name_in_owner = true
layout_mode = 2

[node name="Flavor" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
text = "This is You!"
label_settings = SubResource("LabelSettings_xdxmy")
horizontal_alignment = 1

[node name="StatusEffectList" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1
